# mad76

./: README.md
_layouts/: default.html
doc/: modbas.md
doc/install/: install.md
doc/python/: _config.yml  index.md  python.md
doc/python/_includes/: head.html
doc/race/: race.md
doc/readme/: readme.md
doc/remotecontrol/: remotecontrol.md
doc/teachadjust/: teachadjust.md
doc/teachlinux/: teachlinux.md
doc/teachmad76io/: teachmad76io.md
doc/teachmatlab/: teachmatlab.md
doc/teachpython/: teachpython.md
doc/teachrace/: teachrace.md
doc/teachros/: teachros.md
doc/teachsql/: teachsql.md
doc/vision/: modbas.md  vision.md
mad_ws/src/mbmad/: CMakeLists.txt  package.xml
mad_ws/src/mbmad/include/mbmad/: CarParameters.hpp  CheckpointGraph.hpp  SgDiff.hpp  Spline.hpp  TridiagonalSystem.hpp  Utils.hpp  Vector.hpp
mad_ws/src/mbmad/launch/: madpicam.launch  madpicamrc.launch  madpictrl.launch  madpifull.launch  madpijoy.launch  madpiman.launch  madpisim.launch  madpisimman.launch  madpislctrl.launch  madpislfull.launch  madpislsim.launch  madpitrack.launch  madpiwithUI.launch  madpiwithUIpreview.launch
mad_ws/src/mbmad/src/: CarParameters.cpp  Spline.cpp
mad_ws/src/mbmadcar/: CMakeLists.txt  package.xml
mad_ws/src/mbmadcar/data/: track76.rviz
mad_ws/src/mbmadcar/scripts/: send_maneuver.py
mad_ws/src/mbmadcar/src/: Acc.hpp  CarCtrlNode.cpp  CarDisplayNode.cpp  CarPlant.hpp  CarSimNode.cpp  CurbCtrlNode.cpp  LapCounter.hpp  OperationModeFsm.hpp  PathController.hpp  PositionController.hpp  SmithPredictor.hpp  SpeedController.hpp  VisionSimNode.cpp
mad_ws/src/mbmadctrl/: CMakeLists.txt  package.xml
mad_ws/src/mbmadctrl/launch/: simctrl.launch.py
mad_ws/src/mbmadctrl/src/: CarCtrlNode.cpp  CheckpointMsg.h  CheckpointSequenceMsg.h  Motion.c  Motion.h  Motion_private.h  Motion_types.h  TimeMsg.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h
mad_ws/src/mbmadctrl/src_aarch64/: CarCtrlNode.cpp  CheckpointMsg.h  CheckpointSequenceMsg.h  Motion.c  Motion.h  Motion_private.h  Motion_types.h  TimeMsg.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h
mad_ws/src/mbmadlocate/: CMakeLists.txt  package.xml
mad_ws/src/mbmadlocate/src/: Car.hpp  LocateNode.cpp
mad_ws/src/mbmadmgmt/: CMakeLists.txt  package.xml
mad_ws/src/mbmadmgmt/scripts/: MgmtServer.py  models.py
mad_ws/src/mbmadmgmt/static/: mad.css
mad_ws/src/mbmadmgmt/templates/: index.html
mad_ws/src/mbmadmsgs/: CMakeLists.txt  package.xml
mad_ws/src/mbmadmsgs/msg/: CarInputs.msg  CarLap.msg  CarObs.msg  CarObsList.msg  CarOutputs.msg  CarOutputsExt.msg  CarOutputsExtList.msg  CarOutputsList.msg  CtrlReference.msg  DriveManeuver.msg
mad_ws/src/mbmadmsgs/srv/: ResetLapcounter.srv  TrackGetWaypoints.srv  VisionTransformPoints.srv
mad_ws/src/mbmadrcpi/: CMakeLists.txt  package.xml
mad_ws/src/mbmadrcpi/src/: RcNode.cpp  RcNode.hpp
mad_ws/src/mbmadvisionaruco/: CMakeLists.txt  package.xml
mad_ws/src/mbmadvisionaruco/data/: trackparams.yaml
mad_ws/src/mbmadvisionaruco/scripts/: BoardVision.py  TrackNode.py  setexposuretime.sh
mad_ws/src/mbmadvisionaruco/src/: DelayTestNode.cpp  Frame.hpp  VisionComponent.cpp  VisionNode.cpp  create_board.cpp
mad_ws/src/mbsafe/: CMakeLists.txt  package.xml
mad_ws/src/mbsafe/include/mbsafe/: CheckpointCounterMonitor.hpp  CheckpointDeadlineMonitor.hpp  CheckpointGraphMonitor.hpp  CheckpointJitterMonitor.hpp  CheckpointMonitor.hpp  CheckpointSequence.hpp  CombinedHealth.hpp  Fsm.hpp  Health.hpp  MeasureQuantity.hpp  Platform.hpp  SingleHealth.hpp  String.hpp  Task.hpp  mbsafe-tp.hpp
mad_ws/src/mbsafe/src/: Platform.cpp  mbsafe-tp.cpp
mad_ws/src/mbsafemsgs/: CMakeLists.txt  package.xml
mad_ws/src/mbsafemsgs/msg/: Checkpoint.msg  CheckpointSequence.msg
madpi_ws/src/mbmadpi/: setup.py
madpi_ws/src/mbmadpi/mbmadpi/: carparameters.py  ctrlnode.py  rcnode.py
madpi_ws/src/mbmadpi/overlay/: camera_overlay.py  overlay_getcardata.py  overlay_preview.py  test_overlay_local.py
madpi_ws/src/rcpi/scripts/: mbmadrclib.py  rcpoweron.py  rctest.py  rctestpower1.py
matlab/mbc/: mbc_binsearch.m  mbc_car_display.m  mbc_circle_create.m  mbc_circle_get_points.m  mbc_cmp.m  mbc_cmp_eps.m  mbc_config.m  mbc_ekf_design.m  mbc_ekf_design_discrete.m  mbc_ppval.m  mbc_spline_create.m  mbc_spline_get_nearest.m  mbc_spline_get_reference.m  mbc_straight_create.m  mbc_straight_get_points.m  mbc_track_create.m  mbc_track_display.m  mbc_track_get_cnt.m  mbc_trackpi_create.m  mbc_trackpi_display.m  mbc_trackpi_idealspline.m  mbc_trackpi_spline.m
matlab/vertical/: VARIANT_COM_TYPE.m  VARIANT_TYPE.m  c71_car0_template.slx  c71_data.m  c73_race_obs_car0.slx  d01_data.m  d71_data.m  e6_data.m  e6_point_kappa.m  i01_data.m  mad_lib_template.slx  mbrt_gettime_ext.c  mbrt_gettime_ext.mexa64  mbrt_gettime_ext.mexw64  mbrt_gettime_ext.tlc  mbrt_lib_level0.slx  mbrt_lib_level1.slx  s06_data.m  s06_sig_template.slx  t02_race.m  t71_mad76_params.mat  t71_mad76_small.m  t71_mad76_sopt.mat
pcb/: MAD76.brd  MAD76.sch
