<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbmad</name>
  <version>0.0.0</version>
  <description>Mini Auto Drive Car</description>
  <maintainer email="frank.traenkle@hs-heilbronn.de">frank.traenkle@hs-heilbronn.de</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>madlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>madlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
