<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbmadcar</name>
  <version>0.0.0</version>
  <description>Mini Auto Drive Car</description>
  <maintainer email="frank.traenkle@hs-heilbronn.de">frank.traenkle@hs-heilbronn.de</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>mbsafe</build_depend>
  <build_depend>mbsafemsgs</build_depend>
  <build_depend>mbmad</build_depend>
  <build_depend>mbmadmsgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>mbsafe</exec_depend>
  <exec_depend>mbsafemsgs</exec_depend>
  <exec_depend>mbmad</exec_depend>
  <exec_depend>mbmadmsgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
