<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbmadlocate</name>
  <version>0.0.0</version>
  <description>Mini Auto Drive : Localization of all cars</description>
  <maintainer email="frank.traenkle@hs-heilbronn.de">frank.traenkle@hs-heilbronn.de</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_logging_spdlog</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>mbsafe</build_depend>
  <build_depend>mbsafemsgs</build_depend>
  <build_depend>mbmad</build_depend>
  <build_depend>mbmadmsgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <!-- <exec_depend>rcl_logging_spdlog</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>mbsafe</exec_depend>
  <exec_depend>mbsafemsgs</exec_depend>
  <exec_depend>mbmad</exec_depend>
  <exec_depend>mbmadmsgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
